--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ gymnasium>=0.28.1
 pygame>=2.1.2
 stable_baselines3>=2.0.0
 timm
+
+# InternVL3 cloud model dependencies
+transformers>=4.37.0
+accelerate>=0.25.0
+peft>=0.7.0
